docs: 优化接口文档
